{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player1",
            "id": "f654dd06-1e03-4701-ae4c-065c2b98e73f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "5bc753cc-4bdb-4348-917c-db79aa8fdd0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b16ac961-8905-4dbf-b897-5743ef1c7873",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LampLRControl",
                    "type": "Button",
                    "id": "488cf842-e7be-4ebd-af7a-6f420471ae41",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LampTDControl",
                    "type": "Button",
                    "id": "840eed71-693d-4a3c-b8d2-9264b46886db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TimeRewind",
                    "type": "Button",
                    "id": "86733a56-f603-43d9-9fcc-54412d79a75b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move_Walk",
                    "type": "Button",
                    "id": "38ab001a-76c9-4c6a-a426-c408694fd5ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AbsorbShadow",
                    "type": "Button",
                    "id": "55a6d8fc-5640-4754-b627-40d974d056c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ReleaseShadow",
                    "type": "Button",
                    "id": "d2492a3c-cc85-4e6c-be6a-3c544d150950",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "SideWay",
                    "id": "e9c6b43a-4ecb-4162-a126-f1bb5e689ce1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e04b6637-84f5-44f6-8b70-c583e47c3f44",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "83955129-95d5-444d-94ef-51c07475c8c8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "962dda56-49f9-4e5c-a9d9-eaef9d97e139",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "LeftAndRight",
                    "id": "3f5e88c7-8d4b-493c-9ed0-3813d1a3ba98",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LampLRControl",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "47b51ea7-c4b1-468e-bd26-258f859501b8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LampLRControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "279113ea-7992-413b-a395-4dbb1f0002da",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LampLRControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "TopAndDown",
                    "id": "7c41640d-a4cf-4aea-b0dd-453d55365fc9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LampTDControl",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "36e37720-080f-4be2-ab27-209896074627",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LampTDControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9e75cd38-bd03-47a1-b41d-89f4fce7b8c8",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LampTDControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "475f00c0-3b9e-4d88-9d5b-381957413baf",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeRewind",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc4f84fb-1280-4893-9cad-e903192d1c53",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "Hold(duration=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dd20824-02ba-45aa-b60d-a34c0a159fda",
                    "path": "<Keyboard>/e",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "AbsorbShadow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e2c4125-2d29-4b96-84e4-1304cbfb4c9b",
                    "path": "<Keyboard>/r",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ReleaseShadow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "a633f8ea-046a-449e-a155-565e5c0ba446",
            "actions": [
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "9a910f12-5a67-420e-849d-3df246c28557",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HandTDControl",
                    "type": "Button",
                    "id": "c5a8c957-a33f-4636-9039-28ae25a0627b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HandTDRotateControl",
                    "type": "Button",
                    "id": "0751c85b-6da9-473d-bcc4-6f5a511ed99f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HandLRControl",
                    "type": "Button",
                    "id": "5bc5aac5-2488-4416-919e-bab4f90c4d68",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HandLRRotateControl",
                    "type": "Button",
                    "id": "0ba4bc42-059f-4d22-8a5e-43685befe118",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GenerateShadowGround",
                    "type": "Button",
                    "id": "bd93d861-c87d-4b53-a0f3-e71a7c7431eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ad3b6b4e-6910-4d7e-afb9-9d8c61eb33fd",
                    "path": "<Keyboard>/e",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "LeftAndRight",
                    "id": "dc2cd486-d986-4ced-86d3-e0c856c4a157",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandLRControl",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "cc1cb1b1-f6f6-45d6-a379-94d3e46bf938",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandLRControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6b21d3c7-b461-431c-ab81-de0eaf789200",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandLRControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "TopAndDown",
                    "id": "7e78f2e1-4e6d-4887-939a-d75c7f5ce33a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandTDControl",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3f0df1c8-cf3a-453d-9e2f-6d0d8c210f68",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandTDControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "29b66388-b2b2-4b75-8424-6168927e929a",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandTDControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "TopAndDown",
                    "id": "f174df6d-697b-4b46-8805-164226c1c191",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandTDRotateControl",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a8fa9ed3-e5cf-40d5-ac00-018bdc40eade",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandTDRotateControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5c5667d8-a6f0-485a-8f53-2b9f3c9679ae",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandTDRotateControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftAndRight",
                    "id": "a0062636-645d-4791-b246-cfe8c8a87622",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandLRRotateControl",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8d705959-0454-4bd8-974e-14996071f755",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandLRRotateControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "50c28a7e-7158-4dba-9201-c1228f15d33d",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandLRRotateControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "05f210cc-20b6-4957-8598-df8f064cb493",
                    "path": "<Keyboard>/o",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "GenerateShadowGround",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}